--- a/materials.qmd
+++ b/materials.qmd
@@ -6,12 +6,13 @@ We will be relying on a few resources for this course. You will find the pertina
 
 - [Python for Data Science](https://byuidatascience.github.io/python4ds/): A port of [R for Data Science](https://r4ds.had.co.nz/index.html) using the Python packages pandas and Altair.
 - [pandas User Guide](https://pandas.pydata.org/pandas-docs/stable/user_guide/index.html)
-- [Altair User Guide](https://altair-viz.github.io/)
-- [Plotly Express](https://plotly.com/python/plotly-express/)
+- [Lets Plot User Guide](https://lets-plot.org/docs/)
 - [scikit-learn learn User Guide](https://scikit-learn.org/stable/user_guide.html)
 - [scikit-learn tutorials](https://scikit-learn.org/stable/tutorial/index.html)
 - [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/)
 - [A Whirlwind Tour of Python](https://jakevdp.github.io/WhirlwindTourOfPython/)
 - [SQL](https://docs.data.world/documentation/sql/concepts/basic/intro.html)
+<!-- - [Altair User Guide](https://altair-viz.github.io/)
+- [Plotly Express](https://plotly.com/python/plotly-express/) -->
 
 Wes McKinney's pandas code for his book [Python for Data Analysis]() is a useful reference as well: <https://github.com/wesm/pydata-book>
