--- a/Projects/project_4.qmd
+++ b/Projects/project_4.qmd
@@ -42,7 +42,7 @@ __Information:__ [Data description](https://github.com/byuidatascience/data4dwel
 - [Machine Learning Introduction](/Course%20Materials/ml.qmd) (Skim)
 - [A visual introduction to machine learning](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/) (Read)
 - [P4DS: CH22 Joins](https://aeturrell.github.io/python4DS/joins.html) (Read)
-- [How to choose a good evaluation metric for your Machine learning model](https://ranvir.xyz/blog/how-to-evaluate-your-machine-learning-model-like-a-pro-metrics/) (Skim)
+- [How to choose a good evaluation metric for your Machine learning model](https://web.archive.org/web/20240213170741/https://ranvir.xyz/blog/how-to-evaluate-your-machine-learning-model-like-a-pro-metrics/) (Skim)
 
 
 #### Optional References
