--- a/Projects/project_5.qmd
+++ b/Projects/project_5.qmd
@@ -72,7 +72,7 @@ Here is an example Stretch question(s) for this project. Your instructor may ass
 
 1. __Validate the data provided on GitHub lines up with the article by recreating a 3rd visual from the article.__
 
-1. __Create a new colum that converts the location groupings to a single number. Drop the location categorical column.__
+1. __Create a new column that converts the location groupings to a single number. Drop the location categorical column.__
 
 
 ### Submission:
